--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -18,11 +18,6 @@ body {
   scroll-snap-type: y mandatory;
   background-color: var(--a-white);
 }
-li a:hover{
-  text-decoration: underline;
-}
-/* Section id index */
-section#index {display:none !important;border:2px solid red;}
 
 
 .bookmark {
@@ -31,7 +26,7 @@ section#index {display:none !important;border:2px solid red;}
   header {
     min-height:min-content;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 0vw 4vw;
     font-size: 1.5vw;
@@ -52,7 +47,7 @@ section#index {display:none !important;border:2px solid red;}
     aspect-ratio: 1/0.5;
   }
   header .nav {
-    margin:0 2vw 0 auto;
+    margin:0 2vw;
     display:flex;
     flex-direction: row;
     gap:3.5vw;
@@ -85,6 +80,7 @@ section#index {display:none !important;border:2px solid red;}
     align-items: center;
     gap:3vw;
     color: var(--a-black);
+    margin-left: auto;
   }
   .search_user input[type="checkbox"] {
     width: 1.5vw;
@@ -102,7 +98,7 @@ section#index {display:none !important;border:2px solid red;}
     background-color: var(--b-white);
     width:100%;
     height:auto;
-    min-height:50vh;
+    min-height:60vh;
     color:var(--d-white);
     z-index: 99999;
   }
@@ -210,7 +206,10 @@ section#index {display:none !important;border:2px solid red;}
     margin-top: 1vw;
     line-height: 1;
     font-size: 1.5vw;
-    display: block;
+    display: flex;
+  }
+  #about button span {
+    margin:auto 0;
   }
   #about button i:nth-child(2) {
     margin:auto 0 0 4vw;
@@ -234,7 +233,7 @@ section#index {display:none !important;border:2px solid red;}
 .bookmark {
 }
 /* Start of four */
-section#four {
+  section#four {
     padding:3vw;
     border-bottom: 0.1vw solid var(--c-white);
   }
@@ -280,291 +279,325 @@ section#four {
 /* End of fourCards */
 
 /* MAIN */
-main {
-  display: flex;
-  border:0px solid blue;
-}
+  main {
+    display: flex;
+  }
 /* main */
 /* article */
-article {
-  border:0px solid green;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-}
+  article {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+  }
 /* article */
 
 .bookmark {
 }
 /* Navigation panel on the side */
-.nav-panel {
-  z-index: 999;
-  font-size: 1.4vw;
-  min-width: 15vw;
-  position:relative;
-  min-height:100%;
-  display: none;
-}
-.nav-panel ul {
-  list-style: none;
-  margin: 6vw 0 0 1vw;
-  position:sticky;
-  top:6vw;left:0;
-}
-.nav-panel a {
-  display: block;
-  color: var(--a-black);
-  text-decoration: none;
-  font-weight: bold;
-  padding: 1.5vw 3vw 1.5vw 1vw;
-  white-space: nowrap;
-  border-left: 0.3vw solid gray;
-}
-.nav-panel a:hover {
-  color: var(--p-black);
-}
-.nav-panel a.active {
-  border-left: 0.3vw solid royalblue;
-}
+  .nav-panel {
+    z-index: 999;
+    font-size: 1.4vw;
+    min-width: 15vw;
+    position:relative;
+    min-height:100%;
+  }
+  .nav-panel ul {
+    list-style: none;
+    margin: 6vw 0 0 1vw;
+    position:sticky;
+    top:6vw;left:0;
+  }
+  .nav-panel a {
+    display: block;
+    color: var(--a-black);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 1.5vw 3vw 1.5vw 1vw;
+    white-space: nowrap;
+    border-left: 0.3vw solid gray;
+  }
+  .nav-panel a:hover {
+    color: var(--p-black);
+  }
+  .nav-panel a.active {
+    border-left: 0.3vw solid royalblue;
+  }
 /* Navigation panel on the side */
 
 .bookmark {
 }
 /* Flip recent laptops */
-#recentWorks {
-  scroll-snap-align: center;
-  font-size: 3vw;
-  padding:3vw;
-}
-#recentWorks #honey {
-	display: flex;
-  flex-wrap: wrap;
-  gap:4vw;
-	justify-content: space-between;
-	padding: 3vw 4vw;
-}
-#recentWorks #honey .rw {
-  position: relative;
-  box-shadow: 0 0 0.5vw #000;
-  border-radius: 1vw;
-  overflow:hidden;
-}
-#recentWorks #honey .rw .imgL {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	padding: 2vw 2vw;
-	border-radius: 10px;
-	position: relative;
-  z-index: 1;
-}
-#recentWorks #honey .rw .tect {
-	font-size:1.5vw;
-	background: var(--b-white);
-	position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-	opacity:0;
-	transform: translateY(100%);
-}
-#recentWorks #honey .rw:hover .tect {
-	opacity:1;
-	display:flex;
-	align-items: center;
-	justify-content:center;
-	text-align: center;
-	padding: 1vw 1vw;
-	transition: transform 0.5s ease;
-	transform: translateY(0%);
-	border-radius: 10px;
-	border: 1px solid #fff;
-	box-shadow: 0 0 15px #000;
-}
-#recentWorks #honey .rw img {
-	width: 16vw;
-	aspect-ratio: 1/1;
-	flex-basis: 33.33%;
-}
-#recentWorks #honey .rw span:nth-child(2) {
-	font-size: 2vw;
-	margin: 0.1vw 0vw;
-}
-#recentWorks #honey .rw span:nth-child(3) {
-	font-size: 1.2vw;
-}
+  #recentWorks {
+    scroll-snap-align: center;
+    font-size: 3vw;
+    padding:3vw;
+  }
+  #recentWorks #honey {
+    display: flex;
+    flex-wrap: wrap;
+    gap:4vw;
+    justify-content: space-between;
+    padding: 3vw 2vw;
+  }
+  #recentWorks #honey .rw {
+    position: relative;
+    box-shadow: 0 0 0.5vw #000;
+    border-radius: 1vw;
+    overflow:hidden;
+  }
+  #recentWorks #honey .rw .imgL {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 2vw 2vw;
+    border-radius: 10px;
+    position: relative;
+    z-index: 1;
+  }
+  #recentWorks #honey .rw .tect {
+    font-size:1.5vw;
+    background: var(--b-white);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    opacity:0;
+    transform: translateY(100%);
+  }
+  #recentWorks #honey .rw:hover .tect {
+    opacity:1;
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    text-align: center;
+    padding: 1vw 1vw;
+    transition: transform 0.5s ease;
+    transform: translateY(0%);
+    border-radius: 10px;
+    border: 1px solid #fff;
+    box-shadow: 0 0 15px #000;
+  }
+  #recentWorks #honey .rw img {
+    width: 16vw;
+    aspect-ratio: 1/1;
+    flex-basis: 33.33%;
+  }
+  #recentWorks #honey .rw span:nth-child(2) {
+    font-size: 2vw;
+    margin: 0.1vw 0vw;
+  }
+  #recentWorks #honey .rw span:nth-child(3) {
+    font-size: 1.2vw;
+  }
 /* End of Flip recent laptops */
 
 .bookmark {
 }
 /* exporeTech techCards */
-section#exploreTech {
-  display: flex;
-  flex-direction: column;
-  gap:2vw;
-  padding:3vw;
-  height:min-content;
-}
-#exploreTech h2 {
-  margin-bottom: 1vw;
-  font-weight: 100;
-  font-size: 3vw;
-}
-section#exploreTech #techCards {
-  display:flex;
-  flex-wrap: wrap;
-  gap:0.5vw;
-  padding:0 2vw;
-}
-#exploreTech .tCards {
-  width: calc(50% - 0.55vw);
-  background-color: hsl(0, 0%, 90%);
-  font-size: 1.3vw;
-  outline:0px solid red;
-}
-#exploreTech .tCards .tContent {
-  background-color: hsl(0, 0%, 90%);
-  
-  display:none;
-  padding:1vw;
-  margin-top: 0.25vw;
-  outline:0px solid green;
-}
-#exploreTech .tCards:nth-child(even) .tContent {
-  margin-left: calc(-100% - 0.25em);
-}
-#exploreTech .tCards:hover .tContent {
-  background-color: hsl(0, 0%, 87.5%);
-}
-#exploreTech .tCards:hover {
-  background-color: hsl(0, 0%, 87.5%);
-}
-#exploreTech .tCards .tHead {
-  padding:1vw;
-}
-#exploreTech .tCards .tHead .tIcons {
-  border:none;
-}
-#exploreTech .tCards .tHead .tIcons i {
-  font-size:140%;
-  margin-bottom: 3vw;
-}
-#exploreTech .tCards .tHead .tTexts {
-  display:inline-flex;
-  width:100%;
-  margin-top: 1vw;
-}
-#exploreTech .tCards .tHead .tTexts i:nth-child(2),i:nth-child(3) {
-  margin-left: auto;
-  font-size:140%;
-}
-#exploreTech .tCards .tHead .tTexts i:nth-child(3) {
-  display:none;
-}
-.tCards:not(:focus-within) {
-  height:max-content;
-}
-.tCards:not(:focus-within) .tContent {
-  display: none !important;
-}
-.tCards:focus-within .tContent {
-  display: flex;
-  flex-wrap: wrap;
-  gap:0.25vw;
-}
-.tCards:focus-within .tHead .tIcons i {
-  transform: scale(1.5) !important;
-}
-#exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(3) {
-  display:inline-block;
-}
-#exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(2) {
-  display:none;
-}
-.tCards:focus-within .tHead .tTexts span {
-  display: none;
-}
+  section#exploreTech {
+    display: flex;
+    flex-direction: column;
+    gap:2vw;
+    padding:3vw;
+    height:min-content;
+  }
+  #exploreTech h2 {
+    margin-bottom: 1vw;
+    font-weight: 100;
+    font-size: 3vw;
+  }
+  section#exploreTech #techCards {
+    display:flex;
+    flex-wrap: wrap;
+    gap:0.5vw;
+    padding:0 2vw;
+  }
+  #exploreTech .tCards {
+    width: calc(50% - 0.55vw);
+    background-color: hsl(0, 0%, 90%);
+    font-size: 1.3vw;
+  }
+  #exploreTech .tCards .tContent {
+    background-color: hsl(0, 0%, 90%);
+    width:200%;
+    display:none;
+    padding:1vw;
+    margin-top: 0.25vw;
+  }
+  #exploreTech .tCards:nth-child(even) .tContent {
+    margin-left: calc(-100% - 0.25em);
+  }
+  #exploreTech .tCards:hover .tContent {
+    background-color: hsl(0, 0%, 87.5%);
+  }
+  #exploreTech .tCards:hover {
+    background-color: hsl(0, 0%, 87.5%);
+  }
+  #exploreTech .tCards .tHead {
+    padding:1vw;
+  }
+  #exploreTech .tCards .tHead .tIcons {
+    border:none;
+  }
+  #exploreTech .tCards .tHead .tIcons i {
+    font-size:140%;
+    margin-bottom: 3vw;
+  }
+  #exploreTech .tCards .tHead .tTexts {
+    display:inline-flex;
+    width:100%;
+    margin-top: 1vw;
+  }
+  #exploreTech .tCards .tHead .tTexts i:nth-child(2),i:nth-child(3) {
+    margin-left: auto;
+    font-size:140%;
+  }
+  #exploreTech .tCards .tHead .tTexts i:nth-child(3) {
+    display:none;
+  }
+  .tCards:not(:focus-within) {
+    height:max-content;
+  }
+  .tCards:not(:focus-within) .tContent {
+    display: none !important;
+  }
+  .tCards:focus-within .tContent {
+    display: flex;
+    flex-wrap: wrap;
+    gap:0.25vw;
+  }
+  .tCards:focus-within .tHead .tIcons i {
+    transform: scale(1.5) !important;
+  }
+  #exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(3) {
+    display:inline-block;
+  }
+  #exploreTech .tCards:focus-within .tHead .tTexts i:nth-child(2) {
+    display:none;
+  }
+  .tCards:focus-within .tHead .tTexts span {
+    display: none;
+  }
 
-#exploreTech .tCards .tContent .tcHead {
-  padding-bottom:2vw;
-  font-size: 120%;
-  font-weight: 100 !important;
-  width:100% !important;
-}
-#exploreTech .tCards .tContent .tcLinks {
-  margin-bottom: 1vw;
-  font-size: 90%;
-  width: calc(50% - 0.25vw);
-  display:flex;
-  flex-direction:column;
-  gap:0.5vw;
-}
-#exploreTech .tCards .tContent .tcLinks a {
-  color:#0077B5;
-  text-decoration: none;
-}
+  #exploreTech .tCards .tContent .tcHead {
+    padding-bottom:2vw;
+    font-size: 120%;
+    font-weight: 100 !important;
+    width:100% !important;
+  }
+  #exploreTech .tCards .tContent .tcLinks {
+    margin-bottom: 1vw;
+    font-size: 90%;
+    width: calc(50% - 0.25vw);
+    display:flex;
+    flex-direction:column;
+    gap:0.5vw;
+  }
+  #exploreTech .tCards .tContent .tcLinks a {
+    color:#0077B5;
+    text-decoration: none;
+  }
 /* End More ways */
 
 
 .bookmark {
 }
-/* Boxes of Acheivements */
-#boxes {
-	scroll-snap-align: center;
-  padding:3vw;
-  font-size: 3vw;
-}
-#boxes h2 {
-  margin-bottom: 1vw;
-  font-weight: 100;
-  font-size: 3vw;
-}
-#boxes #allBoxes {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 2vw 2vw;
-}
-#boxes .box {
-  display: flex;
-  flex-basis: calc(33.33% - 2vw);
-  transition: transform 0.5s ease;
-  margin: 0vw 0.5vw 2vw 0;
-}
-#boxes .box:hover p{
-  color:#000;
-}
-#boxes .box h3 {
-  font-size: 60%;
-  font-weight: 400;
-  margin-bottom: 1vw;
-}
-#boxes .box i {
-  margin: 0.1vw 1vw 0 0;
-  color: #4682B4;
-  font-size: 60%;
-}
-#boxes .box p {
-  color: gray;
-  font-size: 40%;
-}
-#boxes .box:hover i {
-  animation: bounce 1.1s infinite;
-}
-@keyframes bounce {
-  0% {transform: translateY(0);}
-  15% {transform: translateY(-15px);}
-  25% {transform: translateY(0px);}
-  35% {transform: translateY(-5px);}
-  50% {transform: translateY(0);}
-  100% {transform: translateY(0);}
-}
-#boxes .box div h3 {
-  white-space: nowrap;
-}
+/* Our services  */
+  #boxes {
+    scroll-snap-align: center;
+    padding:3vw;
+    font-size: 3vw;
+  }
+  #boxes h2 {
+    margin-bottom: 1vw;
+    font-weight: 100;
+    font-size: 3vw;
+  }
+  #boxes #allBoxes {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2vw 2vw;
+  }
+  #boxes .box {
+    display: flex;
+    flex-basis: calc(33.33% - 2vw);
+    transition: transform 0.5s ease;
+    margin: 0vw 0.5vw 2vw 0;
+  }
+  #boxes .box:hover p{
+    color:#000;
+  }
+  #boxes .box h3 {
+    font-size: 60%;
+    font-weight: 400;
+    margin-bottom: 1vw;
+  }
+  #boxes .box i {
+    margin: 0.1vw 1vw 0 0;
+    color: #4682B4;
+    font-size: 60%;
+  }
+  #boxes .box p {
+    color: gray;
+    font-size: 40%;
+  }
+  #boxes .box:hover i {
+    animation: bounce 1.1s infinite;
+  }
+  @keyframes bounce {
+    0% {transform: translateY(0);}
+    15% {transform: translateY(-15px);}
+    25% {transform: translateY(0px);}
+    35% {transform: translateY(-5px);}
+    50% {transform: translateY(0);}
+    100% {transform: translateY(0);}
+  }
+  #boxes .box div h3 {
+    white-space: nowrap;
+  }
 /* End of boxes */
+
+
+.bookmark {
+}
+/* OUR HAPPY CLIENTS */
+  section#happyClients {
+    padding:3vw;
+  }
+  section#happyClients h2 {
+    margin-bottom: 1vw;
+    font-weight: 100;
+    font-size: 3vw;
+  }
+  #allClientCards {
+    display: flex;
+    justify-content: space-between;
+    gap:2vw;
+    padding:2vw 2vw;
+  }
+  #allClientCards .clientCards {
+    display: flex;flex-direction:column;
+    text-align: center;
+  }
+  #allClientCards .clientCards:hover span {
+    opacity: 1;
+  }
+  #allClientCards .clientCards img {
+    padding:2vw 0 0vw 0;
+    height:calc(15vw - 2vw);
+    aspect-ratio: 1/1.1;
+  }
+  #allClientCards .clientCards span {
+    white-space: nowrap;
+    padding:0vw 0 0vw 0;
+    color: var(--d-white);
+    font-size: 1.2vw;
+    opacity: 0;
+  }
+/* OUR HAPPY CLIENTS */
 
 
 
@@ -638,7 +671,6 @@ section#exploreTech #techCards {
   #consult ul li:hover {
     box-shadow: inset 0px -2px 0px 0px gray;
   }
-
   .inConsult {
     display: flex;
     padding:4vw;
@@ -677,15 +709,65 @@ section#exploreTech #techCards {
   footer {
     padding: 0.5vw 4vw 0.5vw 4vw;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    background-color: hsl(0, 0%, 96%);
+    background-color: hsl(0, 0%, 26%);
     font-size: 1.6vw;
+    color:var(--b-white);
+    margin-bottom: 6vw;
   }
-  footer:hover span {
-    background-color: hsl(0, 0%, 100%);
-  }
-  footer #icons {
+  footer #footerF {
+    border-bottom: 2px solid gray;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:100%;
+    padding: 2vw;
+  }
+  footer #footerF p {
+    max-height:100%;
+    padding:1vw;
+    display: flex;
+    gap:6vw;
+    border:2px solid var(--c-white);
+    cursor:pointer;
+  }
+  footer #footerF p:hover {
+    background-color: var(--b-white);
+    color: #000;
+  }
+  footer #footerULs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 1.6vw;
+    width:80%;
+    margin: 4vw 0;
+    flex-basis: 50%;
+  }
+  footer #footerULs ul {
+    font-weight: 600;
+  }
+  footer #footerULs ul li {
+    list-style-type: none;
+    padding-top: 1vw;
+  }
+  footer #footerULs ul li a {
+    color:var(--c-white);
+    text-decoration: none;
+    font-weight: 100;
+  }
+  footer #footerULs ul li:hover a {
+    text-decoration: underline;
+  }
+  footer #iconsRights {
+    display: flex;
+    justify-content: space-between;
+  }
+    footer #icons {
+    margin-left: auto;
+    display: flex;
+    gap:1vw;
   }
   footer #icons .circle {
     width: 3.5vw;
@@ -731,7 +813,7 @@ section#exploreTech #techCards {
     text-decoration: none;
   }
 /* End of all the default styles */
-
+section#index{display:none;}
 
 .bookmark {
 }
@@ -743,13 +825,12 @@ section#exploreTech #techCards {
   section#four #allNewCards {
     padding:2vw;
     display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
     gap:0.1vw 0.11vw;
   }
   section#four #allNewCards .fourCards {
     flex-basis: calc(25% - 0.25vw);
-    border:2px solid red;
   }
   #exploreTech #techCards .tCards {
     width: calc(33.33% - 1vw);
@@ -772,15 +853,56 @@ section#exploreTech #techCards {
 }
 
 /* small devices */
-@media (max-width: 700px) {
+@media (max-width: 900px) {
+  header .nav {
+    order:1;
+  }
+  header img {
+    order:2;
+    max-width:10vw;
+  }
+  header .search_user {
+    order:3;
+    font-size: 150%;
+  }
   section#four #allNewCards {
-    padding:2vw;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap:0.1vw 0.11vw;
+    flex-direction: column;
   }
   .nav-panel {
     display:none;
+  }
+  /* Action Section */
+    article {
+      position:relative;overflow-x: auto;
+    }
+    section#index {
+      width:100%;
+      position:sticky;top:5vw;left:0;
+      z-index: 2;
+      display:none;
+      min-height:fit-content;
+      background-color: hsl(0, 0%, 94%);
+    }
+    section#index ul {
+      display: flex;
+      justify-content: space-between;
+      box-shadow: 0px 1px 5px var(--c-white);
+    }
+    section#index ul li {
+      list-style-type:none;
+      padding:1vw 2vw;
+    }
+    section#index ul li a {
+      text-decoration: none;
+      color:#000;
+      font-size: 1.4vw;
+      padding:1vw 2vw;
+    }
+    section#index ul li a:hover {
+      outline:2px solid var(--b-blue);
+    }
+/* End of Action Section */
+  section#four #techCards .tCards {
+    width:100% !important;
   }
 }
