--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -43,40 +43,43 @@ body {
     box-shadow: 0 0 5px #000;
   }
   header img {
-    max-width: 5vw;
+    max-width: 7vw;
     aspect-ratio: 1/0.5;
   }
-  header .nav {
-    margin:0 2vw;
+  header ul.navSmall {
+    display: none;
+  }
+  header .navLarge {
+    margin:0 2vw 0 auto;
     display:flex;
     flex-direction: row;
     gap:3.5vw;
   }
-  header .nav li {
+  header .navLarge li {
     color: var(--a-black);
     padding: 1.5vw 0vw;
     list-style:none;
     transition: all 0.5s ease;
   }
-  header .nav li:focus {
+  header .navLarge li:focus {
     border:2px solid var(--a-blue);
   }
-  header .nav li a {
+  header .navLarge li a {
     text-decoration:none;
     color: var(--a-black);
     padding: 1vw 0vw;
     font-weight: 600;
     align-self: center;
   }
-  header .nav li a i {
+  header .navLarge li a i {
     font-weight: 700;
     margin-left:0.3vw;
   }
-  header .nav li:hover a {
+  header .navLarge li:hover a {
     color: var(--g-black);
   }
   header .search_user {
-    display: flex;
+    display: none;
     align-items: center;
     gap:3vw;
     color: var(--a-black);
@@ -238,7 +241,7 @@ body {
     border-bottom: 0.1vw solid var(--c-white);
   }
   #four #allNewCards {
-    padding: 2vw 6vw;
+    padding: 2vw 2vw;
     display:flex;
     flex-wrap: wrap;
     gap:0.25vw;
@@ -350,7 +353,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 2vw 2vw;
+    padding: 1vw 1vw;
     border-radius: 10px;
     position: relative;
     z-index: 1;
@@ -418,7 +421,6 @@ body {
   #exploreTech .tCards {
     width: calc(50% - 0.55vw);
     background-color: hsl(0, 0%, 90%);
-    font-size: 1.0vw;
   }
   #exploreTech .tCards .tContent {
     background-color: hsl(0, 0%, 90%);
@@ -438,6 +440,7 @@ body {
   }
   #exploreTech .tCards .tHead {
     padding:1vw;
+    font-size:80%;
   }
   #exploreTech .tCards .tHead .tIcons {
     border:none;
@@ -453,7 +456,6 @@ body {
   }
   #exploreTech .tCards .tHead .tTexts i:nth-child(2),i:nth-child(3) {
     margin-left: auto;
-    font-size:110%;
   }
   #exploreTech .tCards .tHead .tTexts i:nth-child(3) {
     display:none;
@@ -468,6 +470,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap:0.25vw;
+    font-size: 75%;
   }
   .tCards:focus-within .tHead .tIcons i {
     transform: scale(1.5) !important;
@@ -484,13 +487,12 @@ body {
 
   #exploreTech .tCards .tContent .tcHead {
     padding-bottom:2vw;
-    font-size: 100%;
     font-weight: 100 !important;
     width:100% !important;
   }
   #exploreTech .tCards .tContent .tcLinks {
     margin-bottom: 1vw;
-    font-size: 70%;
+    font-size: 100%;
     width: calc(50% - 0.25vw);
     display:flex;
     flex-direction:column;
@@ -531,7 +533,7 @@ body {
     color:#000;
   }
   #boxes .box h3 {
-    font-size: 40%;
+    font-size: 70%;
     font-weight: 400;
     margin-bottom: 1vw;
   }
@@ -542,7 +544,7 @@ body {
   }
   #boxes .box p {
     color: gray;
-    font-size: 30%;
+    font-size: 60%;
   }
   #boxes .box:hover i {
     animation: bounce 1.1s infinite;
@@ -599,49 +601,6 @@ body {
   }
 /* OUR HAPPY CLIENTS */
 
-
-
-
-.bookmark {
-}
-/* Map and contact Us  */
-  #contact {
-    scroll-snap-align: center;
-    padding:3vw;
-  }
-  #contact h2 {
-    margin-bottom: 1vw;
-    font-weight: 100;
-    font-size: 2vw;
-  }
-  #contact #cMapForm {
-    display: flex;
-    justify-content: space-between;
-    padding:2vw 4vw;
-  }
-  #contact #cMapForm iframe {
-    flex-basis: 60%;
-  }
-  #contact #cMapForm #cDetails {
-    display: flex;
-    flex-direction: column;
-    padding: 2vw;
-  }
-  #contact #cMapForm #cDetails h1 {
-    margin-bottom: 3vw;
-    font-size: 1.6vw;
-  }
-  #contact #cMapForm #cDetails .spanA {
-    margin-bottom: 0.5vw;
-    color: #4682B4;
-    font-size: 1.6vw;
-  }
-  #contact #cMapForm #cDetails .spanB {
-    margin-bottom: 3vw;
-    font-size: 1.6vw;
-  }
-/* Map and contact Us  */
-  
 .bookmark {
 }
 /* Consulting */
@@ -650,8 +609,9 @@ body {
     padding:3vw;
   }
   #consult h2 {
-    margin-bottom: 2vw;
+    margin-bottom: 3vw;
     font-weight: 100;
+    font-size: 2vw;
   }
   #consult ul {
     display:flex;
@@ -659,7 +619,7 @@ body {
     margin-left: 2vw;
   }
   #consult ul li {
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     list-style-type: none;
     padding:0 4vw 2vw 4vw;
     box-shadow: inset 0px -1px 0px 0px gray;
@@ -685,15 +645,12 @@ body {
     gap:2vw;
     padding:4vw 2vw;
   }
-  .inConsultText span:nth-child(1) {
-    font-size:100%;
-  }
   .inConsultText span:nth-child(2) {
-    font-size:60%;
+    font-size:80%;
     font-weight: 100;
   }
   .inConsultText a {
-    font-size:60%;
+    font-size:80%;
     text-decoration: none;
     white-space: nowrap;
     color: var(--a-blue);
@@ -702,6 +659,49 @@ body {
     text-decoration: underline;
   }
 /* Consulting */
+
+
+.bookmark {
+}
+/* Map and contact Us  */
+  #contact {
+    scroll-snap-align: center;
+    padding:3vw;
+  }
+  #contact h2 {
+    margin-bottom: 1vw;
+    font-weight: 100;
+    font-size: 2vw;
+  }
+  #contact #cMapForm {
+    display: flex;
+    justify-content: space-between;
+    padding:2vw 4vw;
+  }
+  #contact #cMapForm iframe {
+    flex-basis: 70%;
+  }
+  #contact #cMapForm #cDetails {
+    display: flex;
+    flex-direction: column;
+    padding: 2vw;
+  }
+  #contact #cMapForm #cDetails h1 {
+    margin-bottom: 3vw;
+    font-size: 1.6vw;
+    white-space: nowrap;
+  }
+  #contact #cMapForm #cDetails .spanA {
+    margin-bottom: 0.5vw;
+    color: #4682B4;
+    font-size: 1.2vw;
+  }
+  #contact #cMapForm #cDetails .spanB {
+    margin-bottom: 3vw;
+    font-size: 1.2vw;
+  }
+/* Map and contact Us  */
+  
 
 .bookmark {
 }
@@ -722,6 +722,9 @@ body {
     align-items: center;
     width:100%;
     padding: 2vw;
+  }
+  footer #footerF img {
+    width:20%;
   }
   footer #footerF p {
     max-height:100%;
@@ -763,7 +766,7 @@ body {
     display: flex;
     justify-content: space-between;
   }
-    footer #icons {
+  footer #icons {
     margin-left: auto;
     display: flex;
     gap:1vw;
@@ -853,12 +856,60 @@ section#index{display:none;}
 
 /* small devices */
 @media (max-width: 900px) {
-  header .nav {
-    order:1;
+  header {
+    outline:0px solid red;
+    padding:0;
+    position:relative;
+  }
+  header ul.navLarge {
+    display:none;
+  }
+  header ul.navSmall {
+    display:flex;
+    flex-direction: column;
+    min-height: inherit;
+    padding:1vw 2vw;
+  }
+  header ul.navSmall #navHam {
+    min-height: 100%;
+  }
+  header ul.navSmall #navHam #ham {
+    
+  }
+  header ul.navSmall #navHam #hamClose {
+    display:none;
+  }
+  header ul.navSmall #navLists {
+    position:absolute;
+    top:100%;
+    left:-100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--b-white);
+    min-height: 100vh;
+    transition: all 0.2s ease;
+  }
+  header ul.navSmall #navLists li {
+    list-style-type: none;
+    white-space: nowrap;
+    height:100%;
+    font-size: 130%;
+    padding:1vw;
+  }
+  header ul.navSmall #navLists li a {
+    text-decoration: none;
+    color:var(--b-black);
+    display: flex;
+    justify-content: space-between;
+    padding:1vw 1vw 1vw 1vw;
+    border-bottom: 0.1vw solid;
+    min-width: 20vw;
   }
   header img {
     order:2;
     max-width:10vw;
+    margin-left:auto;
+    margin-right:4vw;
   }
   header .search_user {
     order:3;
