--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -437,7 +437,7 @@ body {
     display:none;
     padding:1vw;
     margin-top: 0.25vw;
-    font-size:1.6vw;
+    font-size:1.2vw;
   }
   #exploreTech .tCards:nth-child(even) .tContent {
     margin-left: calc(-100% - 0.25em);
@@ -450,7 +450,7 @@ body {
   }
   #exploreTech .tCards .tHead {
     padding:1vw;
-    font-size:2vw;
+    font-size:1.4vw;
   }
   #exploreTech .tCards .tHead .tIcons {
     border:none;
@@ -517,46 +517,46 @@ body {
 .bookmark {
 }/* Our services  *//* Our services  *//* Our services  *//* Our services  *//* Our services  */
 /* Our services  *//* Our services  *//* Our services  *//* Our services  *//* Our services  */
-  #boxes {
+  #services {
     scroll-snap-align: center;
     padding:3vw;
     font-size: 2vw;
   }
-  #boxes h2 {
+  #services h2 {
     margin-bottom: 1vw;
     font-weight: 100;
     font-size: 2vw;
   }
-  #boxes #allBoxes {
+  #services #allServices {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding: 2vw 2vw;
   }
-  #boxes .box {
+  #services .box {
     display: flex;
     flex-basis: calc(33.33% - 2vw);
     transition: transform 0.5s ease;
     margin: 0vw 0.5vw 2vw 0;
   }
-  #boxes .box:hover p{
+  #services .box:hover p{
     color:#000;
   }
-  #boxes .box h3 {
+  #services .box h3 {
     font-size: 70%;
     font-weight: 400;
     margin-bottom: 1vw;
   }
-  #boxes .box i {
+  #services .box i {
     margin: 0.1vw 1vw 0 0;
     color: #4682B4;
     font-size: 40%;
   }
-  #boxes .box p {
+  #services .box p {
     color: gray;
     font-size: 60%;
   }
-  #boxes .box:hover i {
+  #services .box:hover i {
     animation: bounce 1.1s infinite;
   }
   @keyframes bounce {
@@ -567,10 +567,10 @@ body {
     50% {transform: translateY(0);}
     100% {transform: translateY(0);}
   }
-  #boxes .box div h3 {
+  #services .box div h3 {
     white-space: nowrap;
   }
-/* End of boxes */
+/* End of services */
 
 
 .bookmark {
