--- a/public/css/ibm.css
+++ b/public/css/ibm.css
@@ -13,6 +13,7 @@
   margin: 0 0 0 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   box-sizing: border-box;
+  /* font-size:95%; */
 }
 body {
   scroll-snap-type: y mandatory;
